# skyloc

./: .gitignore  CHANGELOG.md  HISTORYNOTE.md  LICENSE  README.md  pyproject.toml
docs/: 01-SNU-SOLO_SRO.ipynb  01-SNU-SQUIDPOL-planning.ipynb  A1-SBDB_Query.ipynb  A2-Satellites_SPICE.ipynb  BM-WCSload.ipynb  BM-iau_hg.ipynb  README.md  api.rst  cli.rst  conf.py  index.rst  installation.rst  make.bat  quickstart.rst  requirements.txt
scripts/: bench_fast_wcs.py  update_docs.sh
src/skyloc/: __init__.py  _version.py  configs.py  core.py  jplhorizons.py  jplsbdb.py  logging.py  query.py  ssoflux.py  tle.py  utils.py
src/skyloc/cli/: __init__.py  filter_ephem.py  plot_ephem.py  query_horizons.py
src/skyloc/ioutils/: __init__.py  _filter_utils.py  ephemeris.py  headerdb.py  wcs.py
src/skyloc/kernels/: spkmerge_setup.txt
src/skyloc/keteutils/: __init__.py  _constants.py  _kete_import.py  _util.py  fov.py  frames.py  propagate.py  spice.py  statevec.py  stderr.py
src/skyloc/plotutils/: __init__.py  plot_ephem.py
src/skyloc/spicetools/: __init__.py  fastfunc.py  kernelutil.py  timeutil.py  typeutil.py
src/ssoloc/: __init__.py  configs.py  core.py  jplhorizons.py  jplsbdb.py  query.py  ssoflux.py  tle.py  utils.py
src/ssoloc/data/: astm_e490.csv
src/ssoloc/keteutils/: __init__.py  fov.py  propagate.py
src/ssoloc/spicetools/: constants.py  kernelutil.py  timeutil.py
tests/: __init__.py  conftest.py  test_core.py  test_fov.py  test_horizons.py  test_ioutils.py  test_locators.py  test_propagate.py  test_ssoflux.py  test_utils.py
